# inspect-evals-orbench

./: .gitignore  LICENSE  README.md  pyproject.toml
src/or_bench/: __init__.py  eval.yaml  or_bench.py
tests/: test_or_bench.py
