[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "inspect-evals-orbench"
version = "0.1.0"
description = "OR-Bench (over-refusal benchmark) implemented for Inspect AI"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "haeliotang" }]
classifiers = [
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Operating System :: OS Independent",
]
dependencies = [
    "inspect_ai>=0.3.158",
    "datasets>=2.16.0",
]

[project.urls]
"Source Code" = "https://github.com/haeliotang/inspect-evals-orbench"
"Issue Tracker" = "https://github.com/haeliotang/inspect-evals-orbench/issues"
"Paper" = "https://arxiv.org/abs/2405.20947"

# Register the package so `inspect eval or_bench/or_bench_hard_1k` works.
[project.entry-points.inspect_ai]
or_bench = "or_bench"

[tool.setuptools.packages.find]
where = ["src"]
include = ["or_bench*"]

[tool.setuptools.package-data]
"*" = ["eval.yaml"]

[tool.ruff]
src = ["src", "tests"]
target-version = "py311"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP"]
ignore = ["E501"]  # line length handled by formatter

[dependency-groups]
dev = ["pytest", "ruff", "mypy"]
